<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"

    android:orientation="vertical"
    tools:context="com.example.android.mycalculator.MainActivity">


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="clear_All"
        android:text="@string/clear"
        android:textColor="#ffffff"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/answer_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:gravity="center"
        android:hint="@string/calculated_value"
        android:text=""
        android:textColor="#fcf1f1"
        android:textColorHint="#a7a5a5"
        android:textSize="30sp"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:onClick="seven"
                android:text="@string/_7"
                android:textColor="#ffffff"
                android:textSize="25sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:onClick="four"
                android:text="@string/_4"
                android:textColor="#ffffff"
                android:textSize="25sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:onClick="one"
                android:text="@string/_1"
                android:textColor="#ffffff"
                android:textSize="25sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:onClick="point"
                android:text="@string/dot"
                android:textColor="#ffffff"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:onClick="eight"
                android:text="@string/_8"
                android:textColor="#ffffff"
                android:textSize="25sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:onClick="five"
                android:text="@string/_5"
                android:textColor="#ffffff"
                android:textSize="25sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:onClick="two"
                android:text="@string/_2"
                android:textColor="#ffffff"
                android:textSize="25sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:onClick="zero"
                android:text="@string/_0"
                android:textColor="#ffffff"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:onClick="nine"
                android:text="@string/_9"
                android:textColor="#ffffff"
                android:textSize="25sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:onClick="six"
                android:text="@string/_6"
                android:textColor="#ffffff"
                android:textSize="25sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:onClick="three"
                android:text="@string/_3"
                android:textColor="#ffffff"
                android:textSize="25sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:onClick="equal"
                android:text="@string/equaltosign"
                android:textColor="#ffffff"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:onClick="delete"
                android:text="@string/del"
                android:textColor="#ffffff"
                android:textSize="17sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:onClick="divide"
                android:text="@string/div"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:onClick="multiply"
                android:text="@string/mul"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:onClick="subtraction"
                android:text="@string/minus"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:onClick="addition"
                android:text="@string/plus"
                android:textColor="#ffffff"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
